# BA-path-planning

./: .gitignore  .pre-commit-config.yaml  README.md  main_2d_simplified.py  main_benchmark.py  main_boxplot.py  main_scp_benchmark.py  main_scp_boxplot.py  plot.py  position_generator.py  pyproject.toml  scp.py  scp_seb.py  scp_solver_sebastian.py  scp_wow_2d_fixed.py  test.py  trafo_matrices.py
archive/: main.py  scp_old.py
large_scale_plans/: ETHZ_large_scale_plan.py  ON_large_scale_plan.py  WAY_OF_WATER_large_scale_plan.py  WOW_X_ZURICH_large_scale_plan.py  large_scale_plan.py
results/: scp_benchmark_20250923_162847.csv  scp_benchmark_20250923_162847.json  scp_benchmark_20250923_232650.csv  scp_benchmark_20250923_232650.json  scp_benchmark_20250923_233556.csv  scp_benchmark_20250923_233556.json
results_new/: scp_benchmark_20250924_025821.csv  scp_benchmark_20250924_025821.json  scp_benchmark_20250924_025848.csv  scp_benchmark_20250924_025848.json  scp_benchmark_20250924_030759.csv  scp_benchmark_20250924_030759.json
src/path_planning/: __init__.py
src/path_planning/cli/: compute_trajectories.py  compute_trajectories_batch.py
src/path_planning/configs/: info.txt
src/path_planning/scenarios/: __init__.py  position_generator.py
src/path_planning/solvers/: __init__.py  scp.py
src/path_planning/viz/: __init__.py  plot_runtime_boxplot.py
